--- a/main.css
+++ b/main.css
@@ -14,10 +14,17 @@
   border-width: 0.5px;
   border-color: #F5F5F5;
   border-style: solid;
+  flex-basis: 260px;
+  flex-grow: 1;
 }
 
-.work>div {
+.work>div:first-child {
+  display: flex;
   padding: 8px;
+}
+
+.spacer{
+  flex-grow: 1;
 }
 
 .work>div>img {
@@ -26,8 +33,9 @@
 }
 
 .work>div:last-child {
-  display: grid;
-  grid-template-columns: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7ex;
   font-size: larger;
   border-style: solid none none none;
   border-color: #E0E0E0;
