--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@
 .work>div>img {
   aspect-ratio: 1;
   width: 240px;
+  background: linear-gradient(to right, #f0c27b, #4b1248);
 }
 
 .work>div:last-child {
